# safecopy-history

./: .gitignore  README.md  keep-history.cabal
Data/: KeepHistory.hs
Data/KeepHistory/: DeriveSafeCopy.hs  Types.hs
test/: Example.hs  Example.hsitory  Test.hs  Test.hsitory
